sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: not found: value len
  	for (i<-0 to gap-len-1){
                         ^AlgCombSort:9: error: Boolean does not take parameters
      	swap(i, i+gap);
            ^